Fixed misalignment of Input field of Player name

--- a/style.css
+++ b/style.css
@@ -14,13 +14,15 @@ html, body{
 #title{
     font-style: italic;
     text-align: center;
-    padding-top: 10%;
+    margin-bottom: 10%;
     font-size: xxx-large;
 }
 
 #playerName{
-    margin-top: 5%;
+    margin-top: 1%;
     text-align: center; 
+    margin-bottom: 5%;
+
 }
 
 #playerName > input{
@@ -48,7 +50,7 @@ h1{
 }
 
 .options{
-    display: flex;
+    /* display: flex; */
     align-items: center;
     justify-content: space-around;
 }
